add demo image and responsive width

--- a/index.html
+++ b/index.html
@@ -24,11 +24,31 @@
             <button>Try it free</button>
         </div>
     </div>
-  Try it free
 
-  Build The Community Your Fans Will Love
+    <!-- Intro -->
+    <div id="intro-container">
+      <div><h1>Build The Community Your Fans Will Love</h1></div>
+      <div id="intro-text">
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
+            your audience. Create connections with your users as you engage in genuine discussion.
+        </p>
+      </div>
+      <div id="get-started-button-container">
+        <button>Get Started For Free</button>
+      </div>
+    </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
+    <!-- Demo image of software -->
+    <div id="demo-image-container">
+      <img src="huddle-landing-page-251784-master/images/screen-mockups.svg" alt="demo" />
+    </div>
+  <footer>
+   
+  </footer>
+</body>
+</html>
+
+<!-- Huddle re-imagines the way we build communities. You have a voice, but so does 
   your audience. Create connections with your users as you engage in genuine discussion. 
 
   Get Started For Free
@@ -64,12 +84,4 @@
   To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
   send you spam or pass on your email address
 
-  Subscribe
-
-  <footer>
-    <p class="attribution">
-      This page started life as a challenge on <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 🎉
-    </p>
-  </footer>
-</body>
-</html>
+  Subscribe -->
