--- a/index.html
+++ b/index.html
@@ -42,6 +42,30 @@
     <div id="demo-image-container">
       <img src="huddle-landing-page-251784-master/images/screen-mockups.svg" alt="demo" />
     </div>
+
+    <!-- How many communities/messages section  -->
+    <div id="grid-container">
+      <div class="communities-container icon-container">
+        <div class="icon">
+          <img class="people-icon" src="huddle-landing-page-251784-master/images/icon-communities.svg" alt="cummunities icon" />
+        <h1>1.4k+</h1>
+        <p>Communities Formed</p>
+        </div>
+      </div>
+      <div class="messages-container icon-container">
+        <div class="icon">
+          <img src="huddle-landing-page-251784-master/images/icon-messages.svg" alt="messages icon"/>
+        <h1>2.7m+</h1>
+        <p>Messages Sent</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- grow together -->
+    <div id="grow-together-container">
+      
+    </div>
+
   <footer>
    
   </footer>
