add new file plus html and css structure

--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@
     </div>
 
     <!-- grow together -->
-    <div id="grow-together-container">
+    <div id="grow-together-body">
+      <div class="top-design">
+        <img src="huddle-landing-page-251784-master/images/bg-section-top-desktop-1.svg" alt="top design"/>
+      </div>
+
+      <div id="grow-together-container"></div>
       
+      <div class="bottom-desing">
+        <img src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" alt="bottom design" />
+      </div>
     </div>
+
 
   <footer>
    
