add html structure and css

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
 
     <!-- Intro -->
-    <div id="intro-container">
+    <div class="intro-container">
       <div><h1>Build The Community Your Fans Will Love</h1></div>
       <div id="intro-text">
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
             your audience. Create connections with your users as you engage in genuine discussion.
         </p>
       </div>
-      <div id="get-started-button-container">
+      <div class="get-started-button-container">
         <button>Get Started For Free</button>
       </div>
     </div>
@@ -62,18 +62,56 @@
     </div>
 
     <!-- grow together -->
-    <div id="grow-together-body">
-      <div class="top-design">
-        <img src="huddle-landing-page-251784-master/images/bg-section-top-desktop-1.svg" alt="top design"/>
+    <div class="grow-together-body">
+      <img class="topimg" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-1.svg" />
+      <div id="grow-together-container">
+        <div class="text">
+          <h2>Grow Together</h2>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+              Think of the insightful conversations you miss out on with a feedback form.</p>
+        </div>
+        <div class="grow-img">
+          <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-grow-together.svg" />
+        </div>
       </div>
+      <img class="bottomimg" src="huddle-landing-page-251784-master/images/bg-section-bottom-desktop-1.svg" />
+    </div>
 
-      <div id="grow-together-container"></div>
-      
-      <div class="bottom-desing">
-        <img src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" alt="bottom design" />
+    <!-- Flowing conversations -->
+    <div id="flowing-container">
+      <div>
+        <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-flowing-conversation.svg" />
+      </div>
+      <div class="text">
+        <h2>Flowing Conversations</h2>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+            just-in-time loading for a more natural flow.</p>
       </div>
     </div>
 
+    <!-- You users -->
+    <div class="grow-together-body users-container">
+        <img class="topimg users-bottom-img" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" />
+        <div id="grow-together-container">
+          <div class="text">
+            <h2>Your Users</h2>
+            <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+                Think of the insightful conversations you miss out on with a feedback form.</p>
+          </div>
+          <div class="grow-img">
+            <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-grow-together.svg" />
+          </div>
+        </div>
+        <img class="bottomimg users-bottom-img" src="huddle-landing-page-251784-master/images/bg-section-bottom-desktop-2.svg" />
+      </div>
+
+      <!-- Ready to build -->
+      <div class="intro-container">
+          <div><h1>Ready To Build Your Commuinity?</h1></div>
+          <div class="get-started-button-container">
+            <button>Get Started For Free</button>
+          </div>
+        </div>
 
   <footer>
    
@@ -81,28 +119,7 @@
 </body>
 </html>
 
-<!-- Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  1.4k+
-  Communities Formed
-
-  2.7m+
-  Messages Sent
-
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
+<!-- 
 
   Ready To Build Your Community?
   Get Started For Free
