add css to file

--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
     <div id="grid-container">
       <div class="communities-container icon-container">
         <div class="icon">
-          <img class="people-icon" src="huddle-landing-page-251784-master/images/icon-communities.svg" alt="cummunities icon" />
-        <h1>1.4k+</h1>
-        <p>Communities Formed</p>
+            <div class="icon-img-container">
+              <img class="people-icon" src="huddle-landing-page-251784-master/images/icon-communities.svg" alt="cummunities icon" />
+            </div>
+            <div class="icon-heading-container"></div>
+              <h1>1.4k+</h1>
+              <p>Communities Formed</p>
         </div>
       </div>
       <div class="messages-container icon-container">
         <div class="icon">
-          <img src="huddle-landing-page-251784-master/images/icon-messages.svg" alt="messages icon"/>
-        <h1>2.7m+</h1>
+            <img src="huddle-landing-page-251784-master/images/icon-messages.svg" alt="messages icon"/>
+            <h1>2.7m+</h1>
         <p>Messages Sent</p>
         </div>
       </div>
