--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
     <!-- How many communities/messages section  -->
     <div id="grid-container">
       <div class="communities-container icon-container">
-        <div class="icon">
+        <div>
             <div class="icon-img-container">
-              <img class="people-icon" src="huddle-landing-page-251784-master/images/icon-communities.svg" alt="cummunities icon" />
+              <img class="icon" src="huddle-landing-page-251784-master/images/icon-communities.svg" alt="cummunities icon" />
             </div>
-            <div class="icon-heading-container"></div>
+            <div class="icon-heading-container icon"></div>
               <h1>1.4k+</h1>
               <p>Communities Formed</p>
         </div>
       </div>
       <div class="messages-container icon-container">
-        <div class="icon">
-            <img src="huddle-landing-page-251784-master/images/icon-messages.svg" alt="messages icon"/>
+        <div>
+            <img class="icon" src="huddle-landing-page-251784-master/images/icon-messages.svg" alt="messages icon"/>
             <h1>2.7m+</h1>
         <p>Messages Sent</p>
         </div>
