add html footer structure

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- grow together -->
     <div class="grow-together-body">
       <img class="topimg" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-1.svg" />
-      <div id="grow-together-container">
+      <div class="grow-together-container">
         <div class="text">
           <h2>Grow Together</h2>
           <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
@@ -95,7 +95,7 @@
     <!-- You users -->
     <div class="grow-together-body users-container">
         <img class="topimg users-bottom-img" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" />
-        <div id="grow-together-container">
+        <div class="grow-together-container">
           <div class="text">
             <h2>Your Users</h2>
             <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
@@ -116,9 +116,44 @@
           </div>
         </div>
 
-  <footer>
-   
-  </footer>
+      <div class="footer-img-container">
+        <img class="top-footer-img" src="huddle-landing-page-251784-master/images/bg-footer-top-desktop.svg" />
+      </div>
+      <footer>
+        <div class="footer-grid">
+          <!-- Container one -->
+          <div>
+            <div class="logo-newsletter-container">
+
+            </div>
+            <div class="footer-text">
+
+            </div>
+            <div class="sub-grid-container">
+              <div class="footer-icons">
+
+              </div>
+              <div class="contact-info">
+
+              </div>
+            </div>
+
+          </div>
+
+        <!-- Container two -->
+          <div>
+            <div class="logo-newsletter-container">
+
+            </div>
+            <div class="footer-text">
+
+            </div>
+            <div class="input-form">
+              
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
 
