finished desktop design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with alternating sections</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -85,7 +86,7 @@
       <div>
         <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-flowing-conversation.svg" />
       </div>
-      <div class="text">
+      <div class="text flowing-text">
         <h2>Flowing Conversations</h2>
         <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
             just-in-time loading for a more natural flow.</p>
@@ -122,54 +123,60 @@
       <footer>
         <div class="footer-grid">
           <!-- Container one -->
-          <div>
+          <div class="footer-container">
             <div class="logo-newsletter-container">
-
+              <img class="footer-logo" src="huddle-landing-page-251784-master/images/footer-logo copy.svg" />
             </div>
             <div class="footer-text">
-
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
+                  vestibulum a, ultrices quis sem.</p>
             </div>
             <div class="sub-grid-container">
-              <div class="footer-icons">
-
+              <div class="footer-icons sub-container">
+                <img class="phone-icon" src="huddle-landing-page-251784-master/images/icon-phone.svg"/>
               </div>
-              <div class="contact-info">
+              <div class="contact-info sub-container">
+                  <p>Phone: +1-543-123-4567</p>
+              </div>
+              <div class="footer-icons sub-container email-container">
+                  <img class="phone-icon" src="huddle-landing-page-251784-master/images/icon-email.svg"/>
+                </div>
+                <div class="contact-info sub-container email-container">
+                    <p>example@huddle.com</p>
+                </div>
+            </div>
 
+              <!-- social icons -->
+            <div class="social-media-container">
+              <div >
+                <a href="#" class="fa fa-facebook"></a>
+              </div>
+              <div class="social-container">
+                <a href="#" class="fa fa-instagram"></a>
+              </div>
+              <div class="social-container">
+                <a href="#" class="fa fa-twitter"></a>
               </div>
             </div>
 
           </div>
 
         <!-- Container two -->
-          <div>
+          <div class="footer-container footer-container-two">
             <div class="logo-newsletter-container">
-
+              <h2>NEWSLETTER</h2>
             </div>
             <div class="footer-text">
-
+              <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+                  send you spam or pass on your email address</p>
             </div>
             <div class="input-form">
-              
+              <input type="text" /> <button>Subscribe</button>
             </div>
           </div>
         </div>
+
+        <div class="spacer"></div>
       </footer>
 </body>
 </html>
-
-<!-- 
-
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe -->
