fix responsive img issue

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       </div>
     </div>
 
-    <!-- You users -->
+    <!-- Your users -->
     <div class="grow-together-body users-container">
-        <img class="topimg users-bottom-img" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" />
+        <img class="topimg" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" />
         <div class="grow-together-container">
           <div class="text">
             <h2>Your Users</h2>
@@ -103,7 +103,7 @@
                 Think of the insightful conversations you miss out on with a feedback form.</p>
           </div>
           <div class="grow-img">
-            <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-grow-together.svg" />
+            <img class="design-img" src="huddle-landing-page-251784-master/images/illustration-your-users.svg" />
           </div>
         </div>
         <img class="bottomimg users-bottom-img" src="huddle-landing-page-251784-master/images/bg-section-bottom-desktop-2.svg" />
