finish mobile desing

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="grow-together-body">
       <img class="topimg" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-1.svg" />
       <div class="grow-together-container">
-        <div class="text">
+        <div class="text item1">
           <h2>Grow Together</h2>
           <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
               Think of the insightful conversations you miss out on with a feedback form.</p>
@@ -97,7 +97,7 @@
     <div class="grow-together-body users-container">
         <img class="topimg" src="huddle-landing-page-251784-master/images/bg-section-top-desktop-2.svg" />
         <div class="grow-together-container">
-          <div class="text">
+          <div class="text item1">
             <h2>Your Users</h2>
             <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
                 Think of the insightful conversations you miss out on with a feedback form.</p>
@@ -162,7 +162,7 @@
           </div>
 
         <!-- Container two -->
-          <div class="footer-container footer-container-two">
+          <div class="footer-container footer-container-two item2">
             <div class="logo-newsletter-container">
               <h2>NEWSLETTER</h2>
             </div>
